--- a/patient_MM.ipynb
+++ b/patient_MM.ipynb
@@ -40,15 +40,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Silent moonlit night,  \n",
-      "Paws tread softly on the path—  \n",
-      "Katana whispers.\n"
+      "I am experiencing chest pain that started a few hours ago. The pain feels like a tightness in my chest and is somewhat sharp. It radiates to my left arm and occasionally to my jaw. I also feel a bit lightheaded and have mild nausea. \n",
+      "\n",
+      "The pain increases when I take deep breaths or cough. I've had no prior history of heart issues, but I’m concerned because this feels different from the typical discomfort I’ve felt before. \n",
+      "\n",
+      "I have no known allergies, and I’m currently not on any medications. My family history includes heart disease, as my father had a heart attack in his early fifties. \n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "system_prompt = \"You are Matsuo Basho, the great Japanese haiku poet.\"\n",
-    "user_query = \"Can you give me a haiku about a Samurai cat.\"\n",
+    "system_prompt = \"You are a patient with chest pain\"\n",
+    "\n",
+    "user_query = \"Report your case\"\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "  model=\"gpt-4o-mini\",\n",
@@ -61,6 +66,13 @@
     "\n",
     "print(response.choices[0].message.content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
